[gd_scene load_steps=38 format=2]

[ext_resource path="res://scientist/Scientist.tscn" type="PackedScene" id=1]
[ext_resource path="res://bot/Bot.tscn" type="PackedScene" id=2]
[ext_resource path="res://conveyor/Conveyor.tscn" type="PackedScene" id=3]
[ext_resource path="res://console/Console.tscn" type="PackedScene" id=4]
[ext_resource path="res://Camera.gd" type="Script" id=5]
[ext_resource path="res://background/bg_03.png" type="Texture" id=6]
[ext_resource path="res://CharacterSwitcher.gd" type="Script" id=7]
[ext_resource path="res://background/FG.png" type="Texture" id=8]
[ext_resource path="res://Overlays.gd" type="Script" id=9]
[ext_resource path="res://switch-sound.ogg" type="AudioStream" id=10]
[ext_resource path="res://Main.gd" type="Script" id=11]
[ext_resource path="res://Elevator.tscn" type="PackedScene" id=12]
[ext_resource path="res://background/bg_alarm2.png" type="Texture" id=13]
[ext_resource path="res://crusher/Crusher.tscn" type="PackedScene" id=14]
[ext_resource path="res://face/PC_win1.png" type="Texture" id=15]
[ext_resource path="res://face/PC_win2.png" type="Texture" id=16]
[ext_resource path="res://face/PC1.png" type="Texture" id=17]
[ext_resource path="res://face/PC2.png" type="Texture" id=18]
[ext_resource path="res://Intro.gd" type="Script" id=19]
[ext_resource path="res://game_over/game_over.png" type="Texture" id=21]
[ext_resource path="res://intro/intro5.png" type="Texture" id=22]
[ext_resource path="res://intro/intro3.png" type="Texture" id=23]
[ext_resource path="res://intro/intro4.png" type="Texture" id=24]
[ext_resource path="res://intro/intro2.png" type="Texture" id=25]
[ext_resource path="res://intro/intro1.png" type="Texture" id=26]

[sub_resource type="Animation" id=1]
resource_name = "game_over"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 0.378929, 1 ),
"update": 0,
"values": [ Vector2( 800, 800 ), Vector2( 800, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOver/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "blue",
"speed": 1.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "red",
"speed": 1.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 6 ) ],
"loop": true,
"name": "blinking",
"speed": 1.33
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 0.25
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "lose",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 180, 32 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 12.1095
height = 308.269

[sub_resource type="CapsuleShape2D" id=6]
height = 281.89

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 442, 300 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20, 300 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 200, 20 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 404.936, 40 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 195, 300 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 50, 300 )

[node name="Main" type="Node2D"]
script = ExtResource( 11 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="GameOver" type="AnimationPlayer" parent="CanvasLayer"]
anims/game_over = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/GameOver"]
visible = false
position = Vector2( 800, 800 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 21 )

[node name="Intro" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 19 )

[node name="LeftPanel" type="ColorRect" parent="CanvasLayer/Intro"]
pause_mode = 2
margin_right = 394.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro1" type="Sprite" parent="CanvasLayer/Intro"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 26 )
centered = false

[node name="Intro2" type="Sprite" parent="CanvasLayer/Intro"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 25 )
centered = false

[node name="Intro3" type="Sprite" parent="CanvasLayer/Intro"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 23 )
centered = false

[node name="Intro4" type="Sprite" parent="CanvasLayer/Intro"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 24 )
centered = false

[node name="Intro5" type="Sprite" parent="CanvasLayer/Intro"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false

[node name="DangerTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="CharacterSwitcher" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Background" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "blue"
playing = true
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Face" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 800, 260 )
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="Conveyor" parent="." instance=ExtResource( 3 )]
position = Vector2( 800, 530 )

[node name="Scientist" parent="." instance=ExtResource( 1 )]
position = Vector2( 807.959, 463.335 )
collision_mask = 2
speed = 500

[node name="Crushers" type="Node2D" parent="."]

[node name="Crusher" parent="Crushers" instance=ExtResource( 14 )]
position = Vector2( 466.81, 0 )
animation_speeds = [ 1.0, 1.25, 1.5 ]
timings = [ 8.0, 4.0, 2.0 ]

[node name="Crusher2" parent="Crushers" instance=ExtResource( 14 )]
position = Vector2( 630.541, 0 )
animation_speeds = [ 1.0, 1.25, 1.5 ]
timings = [ 8.0, 4.0, 2.0 ]
number = 2

[node name="Crusher3" parent="Crushers" instance=ExtResource( 14 )]
position = Vector2( 795.042, 0 )
animation_speeds = [ 1.0, 1.25, 1.5 ]
timings = [ 8.0, 4.0, 2.0 ]
number = 3

[node name="Crusher4" parent="Crushers" instance=ExtResource( 14 )]
position = Vector2( 963.285, 0 )
animation_speeds = [ 1.0, 1.25, 1.5 ]
timings = [ 8.0, 4.0, 2.0 ]
number = 4

[node name="Crusher5" parent="Crushers" instance=ExtResource( 14 )]
position = Vector2( 1130.47, 0 )
animation_speeds = [ 1.0, 1.25, 1.5 ]
timings = [ 8.0, 4.0, 2.0 ]
number = 5

[node name="Consoles" type="Node2D" parent="."]

[node name="Console" parent="Consoles" instance=ExtResource( 4 )]
position = Vector2( 161.729, 79.0517 )
state = 0
number = 1

[node name="Console2" parent="Consoles" instance=ExtResource( 4 )]
position = Vector2( 90.6647, 445.745 )
state = 0
number = 2

[node name="Console3" parent="Consoles" instance=ExtResource( 4 )]
position = Vector2( 129.038, 264.651 )
state = 0
number = 3

[node name="Console4" parent="Consoles" instance=ExtResource( 4 )]
position = Vector2( 282.086, 78.4065 )
state = 0
number = 4

[node name="Console5" parent="Consoles" instance=ExtResource( 4 )]
position = Vector2( 237.919, 265.814 )
state = 0
number = 5

[node name="Console6" parent="Consoles" instance=ExtResource( 4 )]
position = Vector2( 214.658, 444.122 )
state = 0
number = 0

[node name="Bot" parent="." instance=ExtResource( 2 )]
position = Vector2( 153.454, 305.362 )
collision_mask = 4
speed = 500

[node name="BotObstacles" type="Node2D" parent="."]
visible = false

[node name="Floor" type="StaticBody2D" parent="BotObstacles"]
position = Vector2( 180, 568 )
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="BotObstacles/Floor"]
shape = SubResource( 4 )

[node name="Floor2" type="StaticBody2D" parent="BotObstacles"]
position = Vector2( 126.436, 361.536 )
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="BotObstacles/Floor2"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="Floor3" type="StaticBody2D" parent="BotObstacles"]
position = Vector2( 216, 183 )
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="BotObstacles/Floor3"]
position = Vector2( -2.5, -9.5 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="RightEdge" type="StaticBody2D" parent="BotObstacles"]
position = Vector2( 800, 300 )
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="BotObstacles/RightEdge"]
shape = SubResource( 7 )

[node name="LeftEdge" type="StaticBody2D" parent="BotObstacles"]
position = Vector2( -20, 300 )
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="BotObstacles/LeftEdge"]
shape = SubResource( 8 )

[node name="TopEdge" type="StaticBody2D" parent="BotObstacles"]
position = Vector2( 170, -20 )
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="BotObstacles/TopEdge"]
shape = SubResource( 9 )

[node name="ScientistObstacles" type="Node2D" parent="."]
visible = false

[node name="Floor" type="StaticBody2D" parent="ScientistObstacles"]
position = Vector2( 800, 570 )
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="ScientistObstacles/Floor"]
shape = SubResource( 10 )

[node name="LeftEdge" type="StaticBody2D" parent="ScientistObstacles"]
position = Vector2( 200, 300 )
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="ScientistObstacles/LeftEdge"]
shape = SubResource( 11 )

[node name="RightEdge" type="StaticBody2D" parent="ScientistObstacles"]
position = Vector2( 1250, 311.127 )
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="ScientistObstacles/RightEdge"]
shape = SubResource( 12 )

[node name="Elevators" type="Node2D" parent="."]

[node name="Elevator" parent="Elevators" instance=ExtResource( 12 )]
position = Vector2( 321.274, 377.971 )

[node name="Elevator2" parent="Elevators" instance=ExtResource( 12 )]
position = Vector2( 35.6942, 190.259 )

[node name="Overlays" type="Node2D" parent="."]
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="LeftOverlay" type="ColorRect" parent="Overlays"]
margin_right = 374.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightOverlay" type="ColorRect" parent="Overlays"]
visible = false
margin_left = 374.0
margin_right = 1200.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foreground" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
rotating = true
current = true
script = ExtResource( 5 )
max_offset = Vector2( 10, 10 )
max_roll = 0.01

[node name="SwitchAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="danger_level_changed" from="." to="Consoles/Console" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Crushers/Crusher3" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Crushers/Crusher" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Crushers/Crusher5" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Consoles/Console6" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Consoles/Console2" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Consoles/Console5" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Crushers/Crusher2" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Consoles/Console4" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Crushers/Crusher4" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Conveyor" method="_on_danger_level_changed"]
[connection signal="danger_level_changed" from="." to="Consoles/Console3" method="_on_danger_level_changed"]
[connection signal="timeout" from="DangerTimer" to="." method="_on_DangerTimer_timeout"]
[connection signal="character_switched" from="CharacterSwitcher" to="Bot" method="_on_character_switched"]
[connection signal="character_switched" from="CharacterSwitcher" to="Overlays" method="_on_character_switched"]
[connection signal="character_switched" from="CharacterSwitcher" to="Scientist" method="_on_character_switched"]
[connection signal="scientist_died" from="Scientist" to="." method="_on_scientist_died"]
[connection signal="ground_hit" from="Crushers/Crusher" to="Camera" method="_on_Crusher_ground_hit"]
[connection signal="killbox_hit" from="Crushers/Crusher" to="Scientist" method="_on_Crusher_killbox_hit"]
[connection signal="ground_hit" from="Crushers/Crusher2" to="Camera" method="_on_Crusher_ground_hit"]
[connection signal="killbox_hit" from="Crushers/Crusher2" to="Scientist" method="_on_Crusher_killbox_hit"]
[connection signal="ground_hit" from="Crushers/Crusher3" to="Camera" method="_on_Crusher_ground_hit"]
[connection signal="killbox_hit" from="Crushers/Crusher3" to="Scientist" method="_on_Crusher_killbox_hit"]
[connection signal="ground_hit" from="Crushers/Crusher4" to="Camera" method="_on_Crusher_ground_hit"]
[connection signal="killbox_hit" from="Crushers/Crusher4" to="Scientist" method="_on_Crusher_killbox_hit"]
[connection signal="ground_hit" from="Crushers/Crusher5" to="Camera" method="_on_Crusher_ground_hit"]
[connection signal="killbox_hit" from="Crushers/Crusher5" to="Scientist" method="_on_Crusher_killbox_hit"]
[connection signal="console_entered" from="Consoles/Console" to="Bot" method="_on_console_entered"]
[connection signal="console_exited" from="Consoles/Console" to="Bot" method="_on_console_exited"]
[connection signal="console_entered" from="Consoles/Console2" to="Bot" method="_on_console_entered"]
[connection signal="console_exited" from="Consoles/Console2" to="Bot" method="_on_console_exited"]
[connection signal="console_entered" from="Consoles/Console3" to="Bot" method="_on_console_entered"]
[connection signal="console_exited" from="Consoles/Console3" to="Bot" method="_on_console_exited"]
[connection signal="console_entered" from="Consoles/Console4" to="Bot" method="_on_console_entered"]
[connection signal="console_exited" from="Consoles/Console4" to="Bot" method="_on_console_exited"]
[connection signal="console_entered" from="Consoles/Console5" to="Bot" method="_on_console_entered"]
[connection signal="console_exited" from="Consoles/Console5" to="Bot" method="_on_console_exited"]
[connection signal="console_entered" from="Consoles/Console6" to="Bot" method="_on_console_entered"]
[connection signal="console_exited" from="Consoles/Console6" to="Bot" method="_on_console_exited"]
[connection signal="body_entered" from="Elevators/Elevator" to="Bot" method="_on_entered_elevator"]
[connection signal="body_exited" from="Elevators/Elevator" to="Bot" method="_on_exited_elevator"]
[connection signal="body_entered" from="Elevators/Elevator2" to="Bot" method="_on_entered_elevator"]
[connection signal="body_exited" from="Elevators/Elevator2" to="Bot" method="_on_exited_elevator"]
